--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/ReportChartUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/ReportChartUC.xaml
@@ -135,12 +135,13 @@
             <lvc:CartesianChart Series="{Binding SeriesCollection}"
                                         LegendLocation="Right"
                                         Margin="30"
-                                x:Name="Chart">
+                                x:Name="Chart"
+                                Foreground="Black">
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis x:Name="time"   Title="Thời gian" Labels="{Binding Labels,Mode=TwoWay}"></lvc:Axis>
+                    <lvc:Axis x:Name="time" Foreground="Black"  Title="Thời gian" Labels="{Binding Labels,Mode=TwoWay}"></lvc:Axis>
                 </lvc:CartesianChart.AxisX>
                 <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Title="Doanh Thu" LabelFormatter="{Binding Formatter}"></lvc:Axis>
+                    <lvc:Axis Title="Doanh Thu" Foreground="Black" LabelFormatter="{Binding Formatter}"></lvc:Axis>
                 </lvc:CartesianChart.AxisY>
             </lvc:CartesianChart>
             <Rectangle
