--- a/WeddingApp/WeddingApp/Views/LoginWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/LoginWindow.xaml
@@ -49,8 +49,8 @@
                         <!--Control Bar-->
                         <uc:ControlBarUC Grid.Row="0" x:Name="controlBar"></uc:ControlBarUC>
 
-                            <!--Login Grid-->
-                        <Grid Grid.Row="1" Margin="150 130">
+                        <!--Login Grid-->
+                        <Grid Grid.Row="1" Margin="150 170">
                             <TextBlock Text="Đăng nhập"
                                     HorizontalAlignment="Center"
                                     Margin="0 40 0 0"
@@ -59,22 +59,23 @@
                                     Foreground="{StaticResource Orange1}">
                             </TextBlock>
 
-                            <Grid Margin="60 140 60 300">
+                            <Grid Margin="0">
                                 <Grid.RowDefinitions>
                                     <RowDefinition></RowDefinition>
                                     <RowDefinition></RowDefinition>
                                 </Grid.RowDefinitions>
 
-                                <Grid Grid.Row="0">
-                                    <materialDesign:PackIcon
+                                <Grid Grid.Row="0" Margin="0 30">
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                        <materialDesign:PackIcon
                                         Kind="Account"
                                         Foreground="{StaticResource Gray}"
                                         Width="30"
                                         Height="30"
                                         VerticalAlignment="Bottom"
                                         HorizontalAlignment="Left"
-                                        Margin="0 0 0 -5" />
-                                    <TextBox
+                                        Margin="0 0 10 0" />
+                                        <TextBox
                                         x:Name="txtUsername"
                                         Text="{Binding UserName}"
                                         TabIndex="0"
@@ -88,19 +89,21 @@
                                         Width="230"
                                         VerticalAlignment="Bottom"
                                         HorizontalAlignment="Right">
-                                    </TextBox>
+                                        </TextBox>
+                                    </StackPanel>
                                 </Grid>
 
-                                <Grid Grid.Row="1">
-                                    <materialDesign:PackIcon
+                                <Grid Grid.Row="1" Margin="0 10">
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
+                                        <materialDesign:PackIcon
                                         Kind="Lock"
                                         Foreground="{StaticResource Gray}"
                                         Width="30"
                                         Height="30"
                                         VerticalAlignment="Bottom"
                                         HorizontalAlignment="Left"
-                                        Margin="0 0 0 -3" />
-                                    <PasswordBox
+                                        Margin="0 0 10 0" />
+                                        <PasswordBox
                                         x:Name="txtPassword"
                                         TabIndex="1"
                                         materialDesign:HintAssist.Hint="Mật khẩu"
@@ -113,32 +116,16 @@
                                         Width="230"
                                         VerticalAlignment="Bottom"
                                         HorizontalAlignment="Right">
-                                        <i:Interaction.Triggers>
-                                            <i:EventTrigger EventName="PasswordChanged">
-                                                <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}"
+                                            <i:Interaction.Triggers>
+                                                <i:EventTrigger EventName="PasswordChanged">
+                                                    <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}"
                                                    CommandParameter="{Binding ElementName=txtPassword}" />
-                                            </i:EventTrigger>
-                                        </i:Interaction.Triggers>
-                                    </PasswordBox>
+                                                </i:EventTrigger>
+                                            </i:Interaction.Triggers>
+                                        </PasswordBox>
+                                    </StackPanel>
                                 </Grid>
                             </Grid>
-
-                            <Button
-                            Style="{StaticResource forgotPasswordBtn}"
-                            Content="Quên mật khẩu?"
-                            FontSize="15"
-                            Foreground="{StaticResource Gray}"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Left"
-                            Height="22"
-                            Width="110"
-                            Padding="0"
-                            Margin="65 55 0 0"
-                            Background="Transparent"
-                            Cursor="Hand">
-                                <!--Command="{Binding OpenForgotPasswordWDCommand}"-->
-                            <!--CommandParameter="{Binding ElementName=LoginWD}">-->
-                            </Button>
 
                             <Button
                              x:Name="btnLogin"
@@ -150,7 +137,7 @@
                             Content="Đăng nhập"
                             Width="270"
                             Height="40"
-                            Margin="0 170 0 0"
+                            Margin="0 250 0 0"
                             FontSize="20"
                             Foreground="White">
                             </Button>
