--- a/WeddingApp/WeddingApp/Views/AddEmployeeWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/AddEmployeeWindow.xaml
@@ -11,7 +11,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
-        Height="780"
+        Height="auto"
         Width="440"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -28,14 +28,9 @@
         SizeToContent="Height">
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
         <Grid>
-            <Grid Margin="10">
+            <Grid>
                 <uc:ControlBarUC Margin="0,-40,0,0"></uc:ControlBarUC>
                 <StackPanel>
-                    <!--nhập thông tin đăng ký-->
-                    <!--nhập thông tin đăng ký-->
-                    <!--nhập thông tin đăng ký-->
-                    <!--nhập thông tin đăng ký-->
-                    <!--nhập thông tin đăng ký-->
                     <!--nhập thông tin đăng ký-->
                     <!--nhập thông tin đăng ký-->
                     <Label
@@ -53,16 +48,16 @@
                     <!--nhập thông tin đăng ký-->
                     <Grid
                         x:Name="grdInformation"
-                        Margin="10 50"
-                        VerticalAlignment="Stretch"
+                        Margin="10 50 10 0"
+                        VerticalAlignment="Center"
                         HorizontalAlignment="Center"
                         Visibility="Visible">
 
                         <StackPanel Orientation="Vertical"
-                                    VerticalAlignment="Stretch" Margin="0,-87,0.4,86.8">
+                                    VerticalAlignment="Center" Margin="0,-87,0.4,86.8">
                             <!--họ tên-->
                             <StackPanel x:Name="nameStack"
-                                Orientation="Horizontal" Margin="0 20">
+                                Orientation="Horizontal" Margin="0 10">
                                 <materialDesign:PackIcon
                                     Kind="Account"
                                     Width="30"
@@ -84,11 +79,11 @@
                                 Width="250"
                                 VerticalContentAlignment="Center"
                                 Height="50"
-                                Padding="2,0,0,0"/>
+                                Padding="2,0,0,0" />
                             </StackPanel>
                             <!--Tên đăng nhập-->
                             <StackPanel x:Name="usernameStack"
-                                Orientation="Horizontal" Margin="0 20">
+                                Orientation="Horizontal" Margin="0 10">
                                 <materialDesign:PackIcon
                                         Kind="AccountCircle"
                                         Width="30"
@@ -108,10 +103,10 @@
                                     Width="250"
                                     VerticalContentAlignment="Center"
                                     Height="50"
-                                    Padding="2,0,0,0"/>
+                                    Padding="2,0,0,0" />
                             </StackPanel>
                             <!--password-->
-                            <StackPanel Orientation="Horizontal" Margin="0 20">
+                            <StackPanel Orientation="Horizontal" Margin="0 10">
                                 <materialDesign:PackIcon
                                     Kind="Password"
                                     Width="30"
@@ -132,17 +127,17 @@
                                     Height="50"
                                     FontSize="16"
                                     FontWeight="Medium"
-                                    Padding="2,0,0,0" >
+                                    Padding="2,0,0,0">
                                     <i:Interaction.Triggers>
                                         <i:EventTrigger EventName="PasswordChanged">
-                                            <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}" 
-                                                   CommandParameter="{Binding ElementName=PasswordBox}"/>
+                                            <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}"
+                                                   CommandParameter="{Binding ElementName=PasswordBox}" />
                                         </i:EventTrigger>
                                     </i:Interaction.Triggers>
                                 </PasswordBox>
                             </StackPanel>
                             <!--repassword-->
-                            <StackPanel Orientation="Horizontal" Margin="0 20">
+                            <StackPanel Orientation="Horizontal" Margin="0 10">
                                 <materialDesign:PackIcon
                                     Kind="Password"
                                     Width="30"
@@ -163,18 +158,18 @@
                                     Height="50"
                                     FontSize="16"
                                     FontWeight="Medium"
-                                    Padding="2,0,0,0" >
+                                    Padding="2,0,0,0">
                                     <i:Interaction.Triggers>
                                         <i:EventTrigger EventName="PasswordChanged">
-                                            <i:InvokeCommandAction Command="{Binding RePasswordChangedCommand}" 
-                                                   CommandParameter="{Binding ElementName=RePasswordBox}"/>
+                                            <i:InvokeCommandAction Command="{Binding RePasswordChangedCommand}"
+                                                   CommandParameter="{Binding ElementName=RePasswordBox}" />
                                         </i:EventTrigger>
                                     </i:Interaction.Triggers>
                                 </PasswordBox>
                             </StackPanel>
                             <!--lương-->
                             <!-- chức vụ -->
-                            <StackPanel Orientation="Horizontal" Margin="0 20">
+                            <StackPanel Orientation="Horizontal" Margin="0 10">
                                 <materialDesign:PackIcon
                                     Kind="Money"
                                     Width="30"
@@ -203,10 +198,9 @@
                                         </ItemsPanelTemplate>
                                     </ComboBox.ItemsPanel>
                                 </ComboBox>
-
                             </StackPanel>
                             <!--địa chỉ-->
-                            <StackPanel Orientation="Horizontal" Margin="0 20">
+                            <StackPanel Orientation="Horizontal" Margin="0 10">
                                 <materialDesign:PackIcon
                                     Kind="Money"
                                     Width="30"
@@ -228,7 +222,7 @@
                                 Width="250"
                                 VerticalContentAlignment="Center"
                                 Height="50"
-                                Padding="2,0,0,0"/>
+                                Padding="2,0,0,0" />
                             </StackPanel>
                             <!--ngày vào làm-->
                             <StackPanel Orientation="Horizontal" Margin="20 20">
@@ -250,7 +244,7 @@
                             FontSize="20"
                             Foreground="White"
                             Command="{Binding AddEmployeeCommand}"
-                            CommandParameter="{Binding ElementName=AddEmployeeWD}"/>
+                            CommandParameter="{Binding ElementName=AddEmployeeWD}" />
                         </StackPanel>
                     </Grid>
                 </StackPanel>
@@ -264,7 +258,7 @@
             RadiusX="10"
             Panel.ZIndex="-2"
             Effect="{StaticResource dropShadow}"
-            Margin="10,-31,10,10">
+            Margin="10,0,10,10">
             </Rectangle>
         </Grid>
     </materialDesign:TransitioningContent>
