--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/DishListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/DishListUC.xaml
@@ -30,12 +30,12 @@
                         <ColumnDefinition Width="2.2*"></ColumnDefinition>
                         <ColumnDefinition Width="1.2*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <TextBlock 
+                    <TextBlock
                            Text="Món ăn"
                            FontSize="24"
                            FontWeight="Medium"
                            Foreground="Black"
-                           Grid.Column="0" TextAlignment="Left" TextWrapping="Wrap" Width="120" Margin="77,29,140,0"/>
+                           Grid.Column="0" TextAlignment="Left" TextWrapping="Wrap" Width="120" Margin="77,29,140,0" />
                     <TextBlock Text="Giá"
                            FontSize="24"
                            VerticalAlignment="Center"
@@ -55,14 +55,14 @@
                     Grid.Column="3"
                     Margin="0 10 0 0"
                     Command="{Binding OpenAddDishListWindowCommand}"
-                    CommandParameter="{Binding ElementName=dishListUC}"/>
+                    CommandParameter="{Binding ElementName=dishListUC}" />
                 </Grid>
                 <!--header-->
 
                 <!--list item-->
                 <ListView Grid.Row="1" Grid.ColumnSpan="4"
                           ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                      x:Name="ListView" d:ItemsSource="{d:SampleData ItemCount=5}">
+                      x:Name="ListView">
                     <!--ItemsSource="{Binding Source={StaticResource dishListVM}, Path=ListDish, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"-->
 
                     <ListView.ItemTemplate>
@@ -120,15 +120,11 @@
                                           CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}" Width="48">
                                             <materialDesign:PackIcon Kind="Edit" Height="30" Width="30" />
                                         </Button>
-                                        <Button
-                                          Style="{StaticResource MaterialDesignIconForegroundButton}"
-                                          ToolTip="Xoá món ăn"
-                                          IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
-                                          Command="{Binding DeleteProductCommand, Source={StaticResource dishListVM}}"
-                                          CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}" Width="48"
-                                            >
-                                            <materialDesign:PackIcon Kind="Delete" Height="30" Width="30" />
-                                        </Button>
+                                        <ToggleButton
+
+  Style="{StaticResource MaterialDesignSwitchLightToggleButton}"
+  ToolTip="Trạng thái"
+  IsChecked="True" />
                                     </StackPanel>
                                 </Grid>
                                 <Rectangle
