--- a/WeddingApp/WeddingApp/Views/InvoiceWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/InvoiceWindow.xaml
@@ -32,7 +32,7 @@
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
         <Grid x:Name="print">
             <uc:ControlBarUC x:Name="controlBar" Margin="10" Panel.ZIndex="99"></uc:ControlBarUC>
-            <Grid Width="790">
+            <Grid Width="790" Margin="0 0 0 20">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="100" />
@@ -57,18 +57,18 @@
                                 <ColumnDefinition Width="1*" />
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" Background="Transparent">
-                                
+
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tên chú rễ: " FontSize="15" Margin="5" />
                                     <TextBlock x:Name="txtGroom" FontSize="15" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tên cô dâu: " FontSize="15" Margin="5" />
-                                    <TextBlock x:Name="txtBride" FontSize="12" Margin="5" FontWeight="DemiBold" />
+                                    <TextBlock x:Name="txtBride" FontSize="15" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Đãi tiệc:" FontSize="15" Margin="5" />
-                                    <TextBlock x:Name ="txtWeddingDate" FontSize="12" Margin="5" FontWeight="DemiBold" />
+                                    <TextBlock x:Name ="txtWeddingDate" FontSize="15" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Mã tiệc cưới: " FontSize="15" Margin="5" />
@@ -82,44 +82,39 @@
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Đơn giá bàn: " FontSize="15" Margin="5" />
-                                    <TextBlock x:Name="txtTableCost" FontSize="12" Margin="5" FontWeight="DemiBold" />
+                                    <TextBlock x:Name="txtTableCost" FontSize="15" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tổng tiền bàn: " FontSize="15" Margin="5" />
-                                    <TextBlock x:Name="txtWeddingCost" FontSize="12" Margin="5" FontWeight="DemiBold" />
+                                    <TextBlock x:Name="txtWeddingCost" FontSize="15" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                             </StackPanel>
                         </Grid>
                         <!--header-->
                         <Grid Margin="10 30 10 0" Height="18">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="0.3*" />
                                 <ColumnDefinition Width="1.7*" />
                                 <ColumnDefinition Width="1*" />
                                 <ColumnDefinition Width="1*" />
                                 <ColumnDefinition Width="1.5*" />
                             </Grid.ColumnDefinitions>
-                            <TextBlock Text="STT" Grid.Column="0" FontSize="12" FontWeight="DemiBold" />
-                            <TextBlock Text="Dịch vụ" Grid.Column="1" FontSize="12" FontWeight="DemiBold" HorizontalAlignment="Center" />
-                            <TextBlock Text="Số lượng" Grid.Column="2" FontSize="12" FontWeight="DemiBold" HorizontalAlignment="Center" />
-                            <TextBlock Text="Đơn giá" Grid.Column="3" FontSize="12" FontWeight="DemiBold" HorizontalAlignment="Right" />
-                            <TextBlock Text="Thành tiền" Grid.Column="4" FontSize="12" FontWeight="DemiBold" HorizontalAlignment="Right" />
+                            <TextBlock Text="Dịch vụ" Grid.Column="0" FontSize="12" FontWeight="DemiBold" HorizontalAlignment="Center" />
+                            <TextBlock Text="Số lượng" Grid.Column="1" FontSize="12" FontWeight="DemiBold" HorizontalAlignment="Center" />
+                            <TextBlock Text="Đơn giá" Grid.Column="2" FontSize="12" FontWeight="DemiBold" HorizontalAlignment="Right" />
+                            <TextBlock Text="Thành tiền" Grid.Column="3" FontSize="12" FontWeight="DemiBold" HorizontalAlignment="Right" />
                         </Grid>
                         <!--LISTVIEW RECEIPT_DETAIL-->
-                        <ListView ScrollViewer.HorizontalScrollBarVisibility="Disabled" x:Name="listView" >
+                        <ListView ScrollViewer.HorizontalScrollBarVisibility="Disabled" x:Name="listView">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <Grid HorizontalAlignment="Stretch" MinHeight="38" Width="730">
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="0.3*" />
                                             <ColumnDefinition Width="1.7*" />
                                             <ColumnDefinition Width="1*" />
                                             <ColumnDefinition Width="1*" />
                                             <ColumnDefinition Width="1.5*" />
                                         </Grid.ColumnDefinitions>
-                                        <Rectangle Fill="Black" Height="1" Opacity="0.5" Grid.ColumnSpan="4" VerticalAlignment="Top" />
-                                        <!--STT-->
-                                        <TextBlock  Grid.Column="0" TextWrapping="Wrap" VerticalAlignment="Center" Text="{Binding Index}"/>
+                                        <Rectangle Fill="Black" Height="1" Opacity="0.5" Grid.ColumnSpan="5" VerticalAlignment="Top" />
                                         <!--Tên dịch vụ-->
                                         <TextBlock
                                                 Text="{Binding SERVICE.SERVICENAME}"
@@ -127,18 +122,18 @@
                                                 FontWeight="Medium"
                                                 VerticalAlignment="Center"
                                                 HorizontalAlignment="Center"
-                                                Grid.Column="1">
+                                                Grid.Column="0">
                                         </TextBlock>
                                         <!--Số lượng-->
                                         <TextBlock x:Name="txtServiceAmount" Margin="0 0 7 0"
                                                    Text="{Binding AMOUNT}"
-                                                   Grid.Column="2" HorizontalAlignment="Center"
+                                                   Grid.Column="1" HorizontalAlignment="Center"
                                                    VerticalAlignment="Center"
                                                    Visibility="Visible" />
                                         <!--Đơn giá-->
-                                        <TextBlock x:Name="txtServiceCost" Text="{Binding SERVICECOST, StringFormat=N0}" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        <TextBlock x:Name="txtServiceCost" Text="{Binding SERVICECOST, StringFormat=N0}" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center" />
                                         <!--Thành tiền-->
-                                        <TextBlock x:Name="txtCalculate" Grid.Column="4" HorizontalAlignment="Right" FontWeight="Medium"
+                                        <TextBlock x:Name="txtCalculate" Grid.Column="3" HorizontalAlignment="Right" FontWeight="Medium"
                                                TextWrapping="Wrap" VerticalAlignment="Center"
                                                    Text="{Binding COST, StringFormat=N0}">
                                         </TextBlock>
@@ -171,19 +166,19 @@
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tổng tiền hoá đơn: " FontSize="15" Margin="5" />
-                                    <TextBlock x:Name="txtTotalCost" FontSize="12" Margin="5" FontWeight="DemiBold" />
+                                    <TextBlock x:Name="txtTotalCost" FontSize="15" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tiền đặt cọc:" FontSize="15" Margin="5" />
-                                    <TextBlock x:Name="txtDeposit" FontSize="12" Margin="5" FontWeight="DemiBold" />
+                                    <TextBlock x:Name="txtDeposit" FontSize="15" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tiền phạt:" FontSize="15" Margin="5" />
-                                    <TextBlock x:Name="txtPenalty" FontSize="12" Margin="5" FontWeight="DemiBold" />
+                                    <TextBlock x:Name="txtPenalty" FontSize="15" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Còn lại:" FontSize="15" Margin="5" />
-                                    <TextBlock x:Name="txtRemaining" FontSize="12" Margin="5" FontWeight="DemiBold" />
+                                    <TextBlock x:Name="txtRemaining" FontSize="15" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                             </StackPanel>
                         </Grid>
@@ -194,9 +189,9 @@
                                   Content="Sử dụng quy định phạt"
                                   x:Name="chkPenalty"
                                   Margin="10"
-                                  FontSize="18" 
+                                  FontSize="18"
                                   Command="{Binding PenaltyCheckedCommand}"
-                                  CommandParameter="{Binding ElementName=invoiceWD}"/>
+                                  CommandParameter="{Binding ElementName=invoiceWD}" />
                         <Button
                 Style="{StaticResource GreenBtn}"
                         Grid.Row="3"
